--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,1 +1,7 @@
-{{outlet}}
+<div class="jumbo">
+  <div class="right tomster"></div>
+  <h2>Sobre o Sciensa Hotels</h2>
+  <p>
+    O SciensaHotels website é um projeto desenvolvido com o objetio de ajudar os desenvolvedores a acharem lugares para morar.
+  </p>
+</div>
