app/templates/contact.hbs - contact information - modify

--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,1 +1,13 @@
-{{outlet}}
+<div class="jumbo">
+  <div class="right tomster"></div>
+  <h2>Contato</h2>
+  <p>O SciensaHotels ficará muito feliz em auxiliá-lo em qualquer dúvida que você tinha</p>
+  <p>
+    Sciensa Hotels
+    <address>
+      AV. BERNARDINO DE CAMPOS, 327 - PARAÍSO, SÃO PAULO - SP, 04004-050, BRAZIL, PRÓXIMO A ESTAÇÃO PARAÍSO<br>
+    </address>
+    <a href="tel:+55.11.3142.9092">+55 (11) 3142-9092</a><br>
+    <a href="mailto:sciensahotel@emberjs.com">sciensahotel@emberjs.com</a>
+  </p>
+</div>
