app/templates/contact.hbs & app/templates/about.hbs - link-to about/contact and contact/about - modify

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -4,4 +4,7 @@
   <p>
     O SciensaHotels website é um projeto desenvolvido com o objetio de ajudar os desenvolvedores a acharem lugares para morar.
   </p>
+  {{#link-to 'contact' class="button"}}
+  	Contato
+  {{/link-to}}
 </div>
