--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -10,4 +10,7 @@
     <a href="tel:+55.11.3142.9092">+55 (11) 3142-9092</a><br>
     <a href="mailto:sciensahotel@emberjs.com">sciensahotel@emberjs.com</a>
   </p>
+  {{#link-to 'about' class="button"}}
+  		Sobre nós
+  {{/link-to}}
 </div>
