--- a/app/templates/rentals.hbs
+++ b/app/templates/rentals.hbs
@@ -1,1 +1,8 @@
-{{outlet}}
+<div class="jumbo">
+  <div class="right tomster"></div>
+  <h2>Bem-vindo!</h2>
+  <p>Queremos que você encontre o Hotel que está procurando!</p>
+  {{#link-to 'about' class="button"}}
+    Sobre nós
+  {{/link-to}}
+</div>
