--- a/app/templates/components/list-filter.hbs
+++ b/app/templates/components/list-filter.hbs
@@ -1,6 +1,6 @@
-{{input value=value 
-		key-up=(action 'handleFilterEntry')
-		class='light'
-		placeholder="Filter By City"}}
+{{input value=value
+        key-up=(action 'handleFilterEntry')
+        class="light"
+        placeholder="Filter By City"}}
 
 {{yield results}}
