app/templates/application.hbs & app/templates/hotels.hbs - add hotel front and application.hbs header - modify

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -12,6 +12,9 @@
       {{#link-to 'contact'}}
         Contato
       {{/link-to}}
+      {{#link-to 'hotels'}}
+        Hotels VIP
+      {{/link-to}}
     </div>
   </div>
   <div class="body">
