--- a/app/templates/hotels.hbs
+++ b/app/templates/hotels.hbs
@@ -1,1 +1,10 @@
+<div class="jumbo">
+  <div class="right tomster"></div>
+  <h2>Bem-vindo!</h2>
+  <p>Hotels VIP</p>
+  {{#link-to 'about' class="button"}}
+    Sobre nós
+  {{/link-to}}
+</div>
+
 {{outlet}}
