app/models/hotel.js & app/routes/hotels.js - organizing and check code - modify

--- a/app/templates/hotels.hbs
+++ b/app/templates/hotels.hbs
@@ -7,4 +7,12 @@
   {{/link-to}}
 </div>
 
+{{#each model as |hotel|}}
+	<li>{{hotel.room}}</li>
+	<li>{{hotel.name}}</li>
+	<li>{{hotel.rates}}</li>
+	<li>{{hotel.rateToken}}</li>
+{{/each}}
+
+
 {{outlet}}
